# Diffusion-Molecule

./: .gitignore
MolPilot/: .gitignore  README.md  pyproject.toml  requirements.txt
MolPilot/configs/: default.yaml
MolPilot/docs/: design_notes.md  project_blueprint.md
MolPilot/molpilot/: __init__.py  alignment.py  artifacts.py  autoencoder.py  build_repair_dataset.py  chem.py  condition_model.py  data.py  diffusion.py  evaluate.py  experiment.py  features.py  graph_editor.py  jepa.py  repair_dataset.py  repair_verifier.py  sample.py  schema.py  sequence_autoencoder.py  source_guidance.py  stage_data.py  train_autoencoder.py  train_diffusion.py  train_understanding.py  understanding.py  verifier.py
MolPilot/scripts/: build_repair_dataset.sh  resample_existing_stage.sh  resample_existing_stage.slurm.sh  run_overnight_resample_ablation.sh  run_repair_smoke.sh  run_server.sh  run_server.slurm.sh  run_smoke.sh  run_staged_server.sh  run_staged_server.slurm.sh  run_staged_smoke.sh  submit_chembl_staged.sh  submit_repair_staged.sh  submit_repair_transfer_staged.sh  summarize_resample_ablation.sh
MolPilot/tests/: test_graph_editor.py  test_jepa.py  test_repair.py  test_sequence_autoencoder.py  test_source_guidance.py  test_task_balanced_eval.py  test_understanding.py  test_verified_dataset.py
SketchImageJEPA/: .gitignore  README.md  RUN_ON_SERVER.md  pyproject.toml
SketchImageJEPA/configs/: default.json  sketchmol_aligned.json
SketchImageJEPA/data/: example_molecules.csv  example_tasks.csv
SketchImageJEPA/docs/: blueprint.md  research_questions.md
(+382 files in other folders)
