[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sketchimage-jepa"
version = "0.1.0"
description = "Standalone SketchMol-aligned molecular JEPA experiment without image-to-OCR bottlenecks."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
rdkit = ["rdkit"]
vision = ["pillow>=9.0"]

[tool.setuptools.packages.find]
include = ["sketchimage_jepa*"]
